--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Faruq Alli-Balogun for Autochek",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.0"
+    "i18next": "^22.0.5",
+    "json-server": "^0.17.0",
+    "react-i18next": "^12.0.0"
   }
 }
